# heic-to-dynamic-gnome-wallpaper

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: image.rs  main.rs  metadata.rs  schema.rs  serializer.rs  solar.rs  timebased.rs  util.rs
src/schema/: plist.rs  xml.rs
src/util/: png.rs  time.rs
